--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port = 8888
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/classicmodels
+
+spring.datasource.url=jdbc:mysql://mysqlcontainer/classicmodels
 spring.datasource.username=root
 spring.datasource.password=429221
 spring.jpa.hibernate.ddl-auto=update
