--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>cbm</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
