--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://mysql-container/classicmodels
+spring.datasource.url=jdbc:mysql://mysql-service:3306/classicmodels
 spring.datasource.username=root
 spring.datasource.password=429221
 spring.jpa.hibernate.ddl-auto=update
