--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/classicmodels
+spring.datasource.url=jdbc:mysql://mysql-service:3306/classicmodels
 spring.datasource.username=root
-server.port=8888
 spring.datasource.password=429221
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
